Add icon for Like button
- Serve images from public folder in development

--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -77,7 +77,10 @@ $games-page-left-offset: 6%;
     }
     &liker {
       cursor: pointer;
-      text-decoration: underline;
+      background: asset_data_url("thumbs_up.png") no-repeat 30% center;
+      //&:hover {
+      //  text-decoration: none;
+      //}
     }
   }
 }
