--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -32,7 +32,7 @@
   <h2 class="game-detail-name">Game Detail</h2>
   <div class="game-detail-image" style="display:none"></div>
   <table>
-  <tr><td class="game-detail-liker" onclick="game_listing_handlers.likeGame(event)">Like</td>
+  <tr><td class="game-detail-liker" onclick="game_listing_handlers.likeGame(event)"></td>
     <td class="game-detail-likes">Likes</td>
   </tr>
   <tr><td>Year</td><td class="game-detail-year"></td></tr>
